# probable-spork

./: .cursorignore  .cursorindexingignore  .editorconfig  .env.example  .env.optimized  .gitattributes  .gitignore  .pre-commit-config.yaml  .zipignore  AGENT_HANDOFF_PLAN.md  AUDIT_REPORT.md  CODE_QUALITY_REPORT.md  CURSOR_SHARED_PIPELINE.md  CURSOR_TASKS_AFTER_PAUSE.txt  CURSOR_TODO_FULL.txt  CUTOUT_MODULE_STRATEGY.md  DEPLOYMENT_SUMMARY.md  DOC_MAP.md  M2_8GB_OPTIMIZATION_SUMMARY.md  MASTER_TODO.md  MICRO_ANIMATIONS_IMPLEMENTATION_SUMMARY.md  MODEL_CONSOLIDATION_SUMMARY.md  Makefile  OPERATOR_RUNBOOK.md  P3-1_IMPLEMENTATION_SUMMARY.md  P3-6_IMPLEMENTATION_SUMMARY.md  P4-6_FACT_GUARD_IMPLEMENTATION_SUMMARY.md  PHASE2_CURSOR.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_AUDIT_REPORT.md  PURPOSE_SUMMARY.md  PYTHON_SYNTAX_AUDIT_REPORT.md  README.md  README_DEVELOPMENT.md  RED_TEAM_FILE_INVENTORY.md  RUN_BOOK.md  STORYBOARD_ASSET_LOOP_IMPLEMENTATION.md  TEXTURE_ENGINE_README.md  (+43 more)
.cursor/: README.md  environment.json
.dev/: .cursorignore  .cursorindexingignore  .pre-commit-config.yaml
animatics_prompt_pack/: Prompt00 - Core SDK, Glossary, Naming.txt  Prompt01 - Brand Pack & Style System.txt  Prompt02 - SceneScript Validator & Fixture Generator.txt  Prompt03 - Storyboarder (LLM) to SceneScript.txt  Prompt04 - SVG Rasterizer & Asset Cache.txt  Prompt05 - Animation Primitives (MoviePy).txt  Prompt06 - Animatics Renderer (Scene → MP4).txt  Prompt07 - VO Cues & Alignment (Optional).txt  README.txt  (+3 more)
(+396 files in other folders)
